# MutationsPy

./: .gitignore  README.md  setup.cfg
src/mutationsPy/: gen_context.py  get_mut.py  mut_matrix.py  read_file.py  simulate_mut_matrix.py
tests/: test_gen_context.py  test_get_mut.py  test_mut_matrix.py  test_read_file.py  test_simulate_mut_matrix.py
tests/test_data/mut_matrix/: hdp_mutmat.txt  hdp_mutmat_no_rearrangement.txt  sigprofiler_mutmat.txt
