[metadata]
name = mutationsPy
version = 0.0.1
author = Phuong Le
author_email = al35@sanger.ac.uk

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    numpy
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mutation_matrix = mutationsPy.mut_matrix:main